; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_ls-files.c_option_parse_exclude_standard.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_ls-files.c_option_parse_exclude_standard.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.option = type { %struct.dir_struct* }
%struct.dir_struct = type { i32 }

@exc_given = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.option*, i8*, i32)* @option_parse_exclude_standard to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @option_parse_exclude_standard(%struct.option* %0, i8* %1, i32 %2) #0 {
  %4 = alloca %struct.option*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.dir_struct*, align 8
  store %struct.option* %0, %struct.option** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load %struct.option*, %struct.option** %4, align 8
  %9 = getelementptr inbounds %struct.option, %struct.option* %8, i32 0, i32 0
  %10 = load %struct.dir_struct*, %struct.dir_struct** %9, align 8
  store %struct.dir_struct* %10, %struct.dir_struct** %7, align 8
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @BUG_ON_OPT_NEG(i32 %11)
  %13 = load i8*, i8** %5, align 8
  %14 = call i32 @BUG_ON_OPT_ARG(i8* %13)
  store i32 1, i32* @exc_given, align 4
  %15 = load %struct.dir_struct*, %struct.dir_struct** %7, align 8
  %16 = call i32 @setup_standard_excludes(%struct.dir_struct* %15)
  ret i32 0
}

declare dso_local i32 @BUG_ON_OPT_NEG(i32) #1

declare dso_local i32 @BUG_ON_OPT_ARG(i8*) #1

declare dso_local i32 @setup_standard_excludes(%struct.dir_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
